--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +21,10 @@
     <br>
     <section>
         <!--Aquí debe colocar los botones de Modificar - Borrar y Listado de Películas-->
+        <a href="/movies/add">Agregar Pelicula</a>
+        <a href="/movies">Listado de Películas</a>
+        <a href="/movies/edit/<%= movie.id %>">Modificar Película</a>
+        <a href="/movies/delete/<%= movie.id %>">Borrar Película</a>
     </section>
 
 </body>
